--- a/src/DogsHouseService.Domain/DogsHouseService.Domain.csproj
+++ b/src/DogsHouseService.Domain/DogsHouseService.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DogsHouseService.SharedKernel\DogsHouseService.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
