Add Docker Compose

--- a/src/DogsHouseService.WebAPI/appsettings.Development.json
+++ b/src/DogsHouseService.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DbSettings": {
+    "ConnectionString": "Server=dogshouseservice-database,1433;Database=DogsDb;User Id=sa;Password=password#12345!;TrustServerCertificate=True;"
   }
 }
