--- a/src/DogsHouseService.Application/DogsHouseService.Application.csproj
+++ b/src/DogsHouseService.Application/DogsHouseService.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DogsHouseService.Domain\DogsHouseService.Domain.csproj" />
   </ItemGroup>
 
