--- a/src/DogsHouseService.Application/DogsHouseService.Application.csproj
+++ b/src/DogsHouseService.Application/DogsHouseService.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
