--- a/src/DogsHouseService.WebAPI/DogsHouseService.WebAPI.csproj
+++ b/src/DogsHouseService.WebAPI/DogsHouseService.WebAPI.csproj
@@ -7,6 +7,8 @@
     <UserSecretsId>732fa50e-2044-4b50-8cf1-6b8c8e772163</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
