Implement Rate Limiting

--- a/src/DogsHouseService.WebAPI/appsettings.Development.json
+++ b/src/DogsHouseService.WebAPI/appsettings.Development.json
@@ -7,5 +7,12 @@
   },
   "DbSettings": {
     "ConnectionString": "Server=dogshouseservice-database,1433;Database=DogsDb;User Id=sa;Password=password#12345!;TrustServerCertificate=True;"
+  },
+  "RateLimitingSettings": {
+    "RejectionStatusCode": 429
+  },
+  "DefaultRateLimitingPolicySettings": {
+    "PermitLimit": 3,
+    "WindowInSeconds": 5
   }
 }
