--- a/src/DogsHouseService.Application/DogsHouseService.Application.csproj
+++ b/src/DogsHouseService.Application/DogsHouseService.Application.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\DogsHouseService.Domain\DogsHouseService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DogsHouseService.Application.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
