--- a/tests/DogsHouseService.Application.UnitTests/DogsHouseService.Application.UnitTests.csproj
+++ b/tests/DogsHouseService.Application.UnitTests/DogsHouseService.Application.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\DogsHouseService.Application\DogsHouseService.Application.csproj" />
+    <ProjectReference Include="..\DogsHouseService.Testing.Shared\DogsHouseService.Testing.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
